Added build option for tests  to make the lib cleaner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,10 @@ include_directories(include)
 
 # Add subdirectories
 add_subdirectory(src)
-add_subdirectory(tests)
 
+# Add tests subdirectory if the build option BUILD_TESTS is ON
+# The option is OFF by default and can be turned ON by executing cmake with -DBUILD_TESTS=ON
+option(BUILD_TESTS "Build the Tests" OFF)
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif(BUILD_TESTS)
