chore: update cmakelists and gitignore

--- a/src/core/ggsw/CMakeLists.txt
+++ b/src/core/ggsw/CMakeLists.txt
@@ -1,10 +1,15 @@
 # Create one shared lib for GGSW.
-file(GLOB GGSW_SRCS "*.c")
-add_library(GGSW SHARED ${GGSW_SRCS})
-target_include_directories(GGSW PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/ggsw
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/glwe
+set(GGSW_SRCS
+    ggsw.c
 )
 
-# As GGSW requires GLWE we have to link libGLWE to the libGGSW.
-target_link_libraries(GGSW PUBLIC GLWE)
+add_library(GGSW SHARED ${GGSW_SRCS})
+
+set_target_properties(GGSW PROPERTIES OUTPUT_NAME ggsw)
+
+target_include_directories(GGSW PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/ggsw
+)
+
+# As GGSW requires GLWE we have to link libglwe to the libggsw.
+target_link_libraries(GGSW PRIVATE GLWE)
