--- a/src/core/glwe/CMakeLists.txt
+++ b/src/core/glwe/CMakeLists.txt
@@ -1,4 +1,10 @@
 # Create one shared lib for GLWE
-file(GLOB GLWE_SRCS "*.c")
+set(GLWE_SRCS
+    glwe.c
+)
+
 add_library(GLWE SHARED ${GLWE_SRCS})
+
+set_target_properties(GLWE PROPERTIES OUTPUT_NAME glwe)
+
 target_include_directories(GLWE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../include/glwe)
