build: fix include path + update gitignore

--- a/src/core/ggsw/CMakeLists.txt
+++ b/src/core/ggsw/CMakeLists.txt
@@ -8,7 +8,7 @@ add_library(GGSW SHARED ${GGSW_SRCS})
 set_target_properties(GGSW PROPERTIES OUTPUT_NAME ggsw)
 
 target_include_directories(GGSW PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/ggsw
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/core/ggsw
 )
 
 # As GGSW requires GLWE we have to link libglwe to the libggsw.
