--- a/src/core/ggsw/CMakeLists.txt
+++ b/src/core/ggsw/CMakeLists.txt
@@ -2,14 +2,12 @@
 set(GGSW_SRCS
     ggsw.c
 )
-
 add_library(GGSW SHARED ${GGSW_SRCS})
 
 set_target_properties(GGSW PROPERTIES OUTPUT_NAME ggsw)
 
-target_include_directories(GGSW PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/core/ggsw
-)
-
 # As GGSW requires GLWE we have to link libglwe to the libggsw.
 target_link_libraries(GGSW PRIVATE GLWE)
+
+target_include_directories(GGSW PUBLIC ${PROJECT_SOURCE_DIR}/include/core/ggsw)
+
