--- a/src/core/glwe/CMakeLists.txt
+++ b/src/core/glwe/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(GLWE SHARED ${GLWE_SRCS})
 
 set_target_properties(GLWE PROPERTIES OUTPUT_NAME glwe)
 
-target_include_directories(GLWE PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../../../include/core/glwe)
+target_include_directories(GLWE PUBLIC ${PROJECT_SOURCE_DIR}/include/core/glwe)
