--- a/src/backend/CMakeLists.txt
+++ b/src/backend/CMakeLists.txt
@@ -1,3 +1,4 @@
 # SPQLios
 add_library(BACKEND SHARED backend.c)
+set_target_properties(BACKEND PROPERTIES OUTPUT_NAME backend)
 target_include_directories(BACKEND INTERFACE "${PROJECT_SOURCE_DIR}/include/backend")
