chore: address feedback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 option(BUILD_TESTS "Build the Tests" ON)
 option(BUILD_EXAMPLES "Build the examples" ON)
 option(BUILD_GGSW "Build the ggsw library inside libcore" ON)
-option(ENABLE_DEBUG "Enable addtionnal prints for debugging purpose" OFF)
+option(ENABLE_DEBUG "Enable additional prints for debugging purpose" OFF)
 option(BUILD_DOCS "Build the documentation using Doxygen" OFF)
 
 #[[ 
