In order to build, do cmake -S . -B build -DENABLE_TESTING=OFF

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,8 +28,22 @@ add_subdirectory(backend)
 # Build common library :
 add_subdirectory(common)
 
+# Build Conv_Prod library
 # Build core library : The library will be an interface that contains glwe and ggsw.
 add_subdirectory(core)
 
 # Build schemes library :
 add_subdirectory(schemes)
+
+add_subdirectory(Convolution_Product)
+
+include(FetchContent)
+
+FetchContent_Declare(
+  sp
+  GIT_REPOSITORY https://github.com/tfhe/spqlios-arithmetic.git
+  # Choisir une branche ou un tag existant
+  GIT_TAG main
+)
+
+FetchContent_MakeAvailable(sp)
